--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"lint": "yarn lint:format && yarn lint:fix"
 	},
 	"dependencies": {
+		"lodash": "^4.17.21",
 		"react": "^17.0.0",
 		"react-dom": "^17.0.0",
 		"react-router-dom": "^5.2.0"
