--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,26 +10,38 @@ on:
 jobs:
 
 
+# need a build for react
 
-  build: 
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: run ls
-        run: ls 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-      
+      - name: Set up Node.js
+        uses: actions/setup-node@v1
         with:
-          java-version: 11
-      - name: Build with Maven
-        run: mvn clean install 
+          node-version: 12.x
+      - name: Cache node modules
+        uses: actions/cache@v1
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+      - name: Install dependencies
+        run: npm install
+      - name: Build
+        run: npm run build --if-present
+      - name: Test
+        run: npm test
       - name: Upload artifact
         uses: actions/upload-artifact@v2
         with:
           name: artifact
-          path: target/*.jar
-      
+          path: build
+
+          
+
+  
 
   deploy:
     needs: build
@@ -52,4 +64,4 @@ jobs:
           heroku_app_name: "spring-boot-heroku"
           heroku_email: "heroku_jar: target/*.jar"
           heroku_process_type: "web"
-
+```
