--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,9 +17,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set up Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
-          node-version: 12.x
+          node-version: 16.x
       - name: Cache node modules
         uses: actions/cache@v1
         with:
@@ -37,7 +37,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: artifact
-          path: build
+          path: dist
 
 
 
@@ -65,5 +65,5 @@ jobs:
           heroku_email: "heroku_jar: target/*.jar"
           heroku_process_type: "web"
 
-          
+
 
