--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,7 @@ jobs:
 
 
   
+# need a deploy for github pages
 
   deploy:
     needs: build
@@ -50,18 +51,16 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: artifact
-          path: target
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
+          path: dist
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@4.1.1
         with:
-          java-version: 11
-      - name: Deploy to Heroku
-        uses: akhileshns/heroku-deploy@v3.12.12
-        with:
-          heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
-          heroku_app_name: "spring-boot-heroku"
-          heroku_email: "heroku_jar: target/*.jar"
-          heroku_process_type: "web"
+          branch: gh-pages
+          folder: dist
+          clean: true
+          token: ${{ secrets.GITHUB_TOKEN }}
+          
+  
 
 
 
